--- a/gym/common/yang/Makefile
+++ b/gym/common/yang/Makefile
@@ -13,10 +13,15 @@ validate:
 	pyang vnf-pp.yang -f jstree -o "$(DOC_DIR)/vnf-pp.html"
 	pyang vnf-pp.yang -f uml -o "$(DOC_DIR)/vnf-pp.uml"
 	
+	pyang vnf-br.yang -f tree -o "$(DOC_DIR)/vnf-br.tree"
+	pyang vnf-br.yang -f jstree -o "$(DOC_DIR)/vnf-br.html"
+	pyang vnf-br.yang -f uml -o "$(DOC_DIR)/vnf-br.uml"
+	
 build:
 	# generate / compile python model
 	pyang --plugindir $(PYBINDPLUGIN) -f pybind -p --use-xpath-helper --use-extmethods -o vnf_bd.py vnf-bd.yang
 	pyang --plugindir $(PYBINDPLUGIN) -f pybind -p --use-xpath-helper --use-extmethods -o vnf_pp.py vnf-pp.yang
+	pyang --plugindir $(PYBINDPLUGIN) -f pybind -p --use-xpath-helper --use-extmethods -o vnf_br.py vnf-br.yang
 
 	#In vnf_bd.py and vnf_pp.py - Replace ALL: self._path_helper = False -> self._path_helper = kwargs.get("path_helper", False)
 
